--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "next-sanity": "^4.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-portable-text": "^0.6.0",
     "sanity": "^3.0.0",
+    "sanity-plugin-iframe-pane": "^2.1.1",
     "styled-components": "^5.2.0",
     "superjson": "1.9.1",
     "zod": "^3.20.2"
