--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-portable-text": "^0.6.0",
     "sanity": "^3.0.0",
     "sanity-plugin-iframe-pane": "^2.1.1",
+    "sharp": "^0.31.3",
     "styled-components": "^5.2.0",
     "superjson": "1.9.1",
     "zod": "^3.20.2"
