--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,8 +33,7 @@
     "**/*.tsx",
     "**/*.cjs",
     "**/*.mjs",
-    ".next/types/**/*.ts",
-    "next.config.js"
+    ".next/types/**/*.ts"
   ],
   "exclude": ["node_modules"]
 }
